Facebook Login Integration

--- a/src/pages/tutorial/tutorial.html
+++ b/src/pages/tutorial/tutorial.html
@@ -15,6 +15,7 @@
       <img [src]="slide.image" class="slide-image"/>
       <h2 class="slide-title" [innerHTML]="slide.title"></h2>
       <p [innerHTML]="slide.description"></p>
+      <button ion-button block (click)="doFbLogin()">Facebook Login</button>
     </ion-slide>
     <ion-slide>
       <img src="img/logo.png" class="slide-image"/>
