--- a/src/pages/tutorial/tutorial.html
+++ b/src/pages/tutorial/tutorial.html
@@ -1,5 +1,5 @@
 <ion-header no-shadow>
-  <ion-navbar>
+  <ion-navbar color="primary">
     <!--<button menuToggle>-->
       <!--<ion-icon name="menu"></ion-icon>-->
     <!--</button>-->
